updated schema for swagger post/put
